--- a/TapasTop/app/src/main/res/navigation/nav_graph.xml
+++ b/TapasTop/app/src/main/res/navigation/nav_graph.xml
@@ -16,5 +16,14 @@
     <fragment
         android:id="@+id/mainMenuFragment"
         android:name="es.upm.isii.tapastop.MainMenuFragment"
-        android:label="MainMenuFragment" />
+        android:label="MainMenuFragment" >
+        <action
+            android:id="@+id/action_mainMenuFragment_to_profileFragment"
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/enter_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="es.upm.isii.tapastop.ProfileFragment"
+        android:label="ProfileFragment" />
 </navigation>
