--- a/TapasTop/app/src/main/res/layout/fragment_initial.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_initial.xml
@@ -34,7 +34,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="180dp"
+            android:layout_alignEnd="@id/app_title"
+            android:layout_marginLeft="190dp"
             android:layout_marginBottom="20dp"
             app:lottie_rawRes="@raw/login_animation_lottie"
             app:lottie_autoPlay="true"
