--- a/TapasTop/app/src/main/res/layout/fragment_initial.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_initial.xml
@@ -42,52 +42,7 @@
     </RelativeLayout>
 
 
-    
-    <!--
-    <ImageView
-        android:id="@+id/login_bg"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:src="@drawable/login_background"
-        app:layout_constraintVertical_bias="0"
-        android:scaleType="centerCrop"
-        app:layout_constraintHeight_percent=".27"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/app_title"
-        android:layout_width="match_parent"
-        android:layout_height="190dp"
-        app:lottie_rawRes="@raw/tapas_top_lottie"
-        app:lottie_autoPlay="true"
-        android:scaleType="centerInside"
-        app:layout_constraintVertical_bias=".2"
-        app:layout_constraintLeft_toLeftOf="@id/login_bg"
-        app:layout_constraintRight_toRightOf="@id/login_bg"
-        app:layout_constraintBottom_toTopOf="@id/constraintlayout"
-        app:layout_constraintTop_toTopOf="@id/login_bg"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="79sp"
-        android:shadowColor="@color/black"
-        android:shadowRadius="7"
-        android:shadowDx="30"
-        android:shadowDy="5"
-        android:textAlignment="center"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintVertical_bias=".2"
-        app:layout_constraintLeft_toLeftOf="@id/login_bg"
-        app:layout_constraintRight_toRightOf="@id/login_bg"
-        app:layout_constraintBottom_toBottomOf="@id/login_bg"
-        app:layout_constraintTop_toTopOf="@id/login_bg" />-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintlayout"
         android:layout_width="match_parent"
@@ -99,6 +54,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/view_pager"
+            app:layout_constraintTop_toTopOf="@id/tab_layout"
+            android:background="@drawable/white_circle"
+            android:elevation="8dp"
+            android:visibility="gone">
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:indeterminateTint="@color/grey_900"/>
+
+        </RelativeLayout>
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
