--- a/TapasTop/app/src/main/res/layout/fragment_login_tab.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_login_tab.xml
@@ -24,6 +24,7 @@
             android:id="@+id/login_username_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textAutoComplete"
             android:hint="@string/username_hint"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -50,7 +51,7 @@
             android:id="@+id/login_password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:inputType="textPassword|textAutoComplete"
             />
     </com.google.android.material.textfield.TextInputLayout>
     <TextView
