--- a/TapasTop/app/src/main/res/layout/fragment_post_signup.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_post_signup.xml
@@ -200,7 +200,22 @@
 
 
         </ScrollView>
+        <RelativeLayout
+            android:id="@+id/loading_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/white_circle"
+            android:elevation="8dp"
+            android:visibility="gone"
+            >
+            <ProgressBar
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:indeterminateTint="@color/grey_900"/>
 
+        </RelativeLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/next_screen"
             android:layout_width="wrap_content"
