--- a/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
@@ -30,6 +30,7 @@
                 android:id="@+id/signup_username_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textAutoComplete"
                 android:hint="@string/username_hint"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -52,7 +53,7 @@
                 android:id="@+id/signup_email_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:inputType="textAutoComplete|textEmailAddress"
                 android:hint="@string/email_hint" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,7 +77,7 @@
                 android:id="@+id/signup_password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="textPassword|textAutoComplete"
                 android:hint="@string/password_hint"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +100,7 @@
                 android:id="@+id/signup_confirm_password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="textPassword|textAutoComplete"
                 android:hint="@string/confirm_password_hint"/>
 
 
