Fix logout action and disable dark mode

--- a/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
@@ -21,9 +21,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize">
                 <ImageView
+                    android:id="@+id/logout_img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_back"
+                    android:src="@drawable/ic_logout"
+                    android:rotation="180"
                     android:padding="15dp"
                     android:layout_centerVertical="true"/>
                 <ImageView
@@ -224,22 +226,6 @@
                         android:textColor="@color/grey_900"/>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
-            <!--
-          <TextView
-                      <TextView
-                android:id="@+id/profile_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/profile_title"
-                android:textSize="27sp"
-                android:fontFamily="@font/brandon_grotesque_black"
-                android:textAllCaps="true"
-                android:paddingLeft="10dp"/>
-
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              tools:text="Username"
-              />-->
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
