--- a/TapasTop/app/src/main/res/navigation/nav_graph.xml
+++ b/TapasTop/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,7 @@
             android:id="@+id/action_initialFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment"
             app:enterAnim="@anim/enter_anim"
-            app:popUpTo="@id/nav_graph"
+            app:popUpTo="@id/initialFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_initialFragment_to_postSignUpFragment"
@@ -28,6 +28,11 @@
             android:id="@+id/action_mainMenuFragment_to_profileFragment"
             app:destination="@id/profileFragment"
             app:enterAnim="@anim/enter_anim" />
+        <action
+            android:id="@+id/action_mainMenuFragment_to_initialFragment"
+            app:destination="@id/initialFragment"
+            app:popUpTo="@id/initialFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
