--- a/TapasTop/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_password_recovery.xml
@@ -5,7 +5,7 @@
         <variable
             name="viewModel"
             type="es.upm.isii.tapastop.model.UserViewModel" />
-        
+
     </data>
     <FrameLayout
         android:layout_width="match_parent"
@@ -17,10 +17,10 @@
             android:layout_height="match_parent"
             android:background="@color/amber_700">
             <TextView
-                android:id="@+id/email_verification_title"
+                android:id="@+id/forgot_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/email_verification_title"
+                android:text="@string/forgot_password_title"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -32,14 +32,14 @@
                 android:textColor="@color/black"
                 />
             <TextView
-                android:id="@+id/email_verification_help"
+                android:id="@+id/forgot_password_help"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/check_inbox_hint"
                 android:layout_marginTop="30dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                app:layout_constraintTop_toBottomOf="@id/email_verification_title"
+                app:layout_constraintTop_toBottomOf="@id/forgot_password"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -53,11 +53,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/code"
-                app:layout_constraintTop_toBottomOf="@id/email_verification_help"
-                app:layout_constraintLeft_toLeftOf="@id/email_verification_help"
-                app:layout_constraintRight_toRightOf="@id/email_verification_help"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/forgot_password_help"
+                app:layout_constraintLeft_toLeftOf="@id/forgot_password_help"
+                app:layout_constraintRight_toRightOf="@id/forgot_password_help"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.2"
+                app:layout_constraintVertical_bias="0.1"
                 android:fontFamily="@font/brandon_grotesque_black"
                 android:textSize="36sp"
                 android:textColor="@color/grey_900"
