--- a/TapasTop/app/src/main/res/layout/fragment_initial.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_initial.xml
@@ -41,6 +41,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignEnd="@id/app_title"
+                android:padding="20dp"
                 android:layout_marginLeft="190dp"
                 android:layout_marginBottom="20dp"
                 app:lottie_rawRes="@raw/login_animation_lottie"
