--- a/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete"
+                android:textCursorDrawable="@null"
                 android:hint="@string/username_hint"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete|textEmailAddress"
+                android:textCursorDrawable="@null"
                 android:hint="@string/email_hint" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,12 +74,14 @@
             app:layout_constraintVertical_bias="0"
             app:layout_constraintWidth_percent=".8"
             app:startIconDrawable="@drawable/ic_password_lock"
+            app:errorIconDrawable="@null"
             app:endIconMode="password_toggle">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword|textAutoComplete"
+                android:textCursorDrawable="@null"
                 android:hint="@string/password_hint"/>
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,12 +99,14 @@
             app:layout_constraintVertical_bias="0"
             app:layout_constraintWidth_percent=".8"
             app:startIconDrawable="@drawable/ic_password_lock"
+            app:errorIconDrawable="@null"
             app:endIconMode="password_toggle">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_confirm_password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword|textAutoComplete"
+                android:textCursorDrawable="@null"
                 android:hint="@string/confirm_password_hint"/>
 
 
