--- a/TapasTop/app/src/main/res/navigation/nav_graph.xml
+++ b/TapasTop/app/src/main/res/navigation/nav_graph.xml
@@ -12,12 +12,19 @@
             android:id="@+id/action_initialFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment"
             app:enterAnim="@anim/enter_anim"
-            app:popUpTo="@id/initialFragment"
-            app:popUpToInclusive="false" />
+            app:popUpTo="@id/mainMenuFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_initialFragment_to_verifyMailFragment"
             app:destination="@id/verifyMailFragment"
-            app:enterAnim="@android:anim/slide_in_left" />
+            app:enterAnim="@android:anim/slide_in_left"
+            app:popUpTo="@id/mainMenuFragment"
+            app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_initialFragment_to_usernameForgotPasswordFragment"
+            app:destination="@id/usernameForgotPasswordFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/usernameForgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainMenuFragment"
@@ -26,17 +33,31 @@
         <action
             android:id="@+id/action_mainMenuFragment_to_profileFragment"
             app:destination="@id/profileFragment"
-            app:enterAnim="@anim/enter_anim" />
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/mainMenuFragment"
+            app:popUpToInclusive="false" />
         <action
             android:id="@+id/action_mainMenuFragment_to_initialFragment"
             app:destination="@id/initialFragment"
-            app:popUpTo="@id/initialFragment"
+            app:popUpTo="@id/mainMenuFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_mainMenuFragment_to_searchFragment"
+            app:destination="@id/searchFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popEnterAnim="@android:anim/fade_in" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="es.upm.isii.tapastop.ProfileFragment"
-        android:label="ProfileFragment" />
+        android:label="ProfileFragment" >
+        <action
+            android:id="@+id/action_profileFragment_to_editProfileFragment"
+            app:destination="@id/editProfileFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
     <fragment
         android:id="@+id/ageValidationFragment"
         android:name="es.upm.isii.tapastop.AgeValidationFragment"
@@ -44,7 +65,7 @@
         <action
             android:id="@+id/action_ageValidationFragment_to_initialFragment"
             app:destination="@id/initialFragment"
-            app:popUpTo="@id/nav_graph"
+            app:popUpTo="@id/ageValidationFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -54,7 +75,7 @@
         <action
             android:id="@+id/action_postSignUpFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment"
-            app:popUpTo="@id/nav_graph"
+            app:popUpTo="@id/postSignUpFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -64,7 +85,66 @@
         <action
             android:id="@+id/action_verifyMailFragment_to_postSignUpFragment"
             app:destination="@id/postSignUpFragment"
-            app:popUpTo="@id/initialFragment"
+            app:popUpTo="@id/verifyMailFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="es.upm.isii.tapastop.EditProfileFragment"
+        android:label="EditProfileFragment" >
+        <action
+            android:id="@+id/action_editProfileFragment_to_profileFragment"
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/profileFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="es.upm.isii.tapastop.SearchFragment"
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/searchFragment"
             app:popUpToInclusive="false" />
     </fragment>
+    <fragment
+        android:id="@+id/usernameForgotPasswordFragment"
+        android:name="es.upm.isii.tapastop.UsernameForgotPasswordFragment"
+        android:label="UsernameForgotPasswordFragment" >
+        <action
+            android:id="@+id/action_usernameForgotPasswordFragment_to_passwordRecoveryFragment"
+            app:destination="@id/passwordRecoveryFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/usernameForgotPasswordFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/passwordRecoveryFragment"
+        android:name="es.upm.isii.tapastop.PasswordRecoveryFragment"
+        android:label="PasswordRecoveryFragment" >
+        <action
+            android:id="@+id/action_passwordRecoveryFragment_to_newPasswordFragment"
+            app:destination="@id/newPasswordFragment"
+            app:enterAnim="@anim/enter_anim"
+            app:popUpTo="@id/passwordRecoveryFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/newPasswordFragment"
+        android:name="es.upm.isii.tapastop.NewPasswordFragment"
+        android:label="NewPasswordFragment" >
+        <action
+            android:id="@+id/action_newPasswordFragment_to_initialFragment"
+            app:destination="@id/initialFragment"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popUpTo="@id/initialFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="es.upm.isii.tapastop.UserProfileFragment"
+        android:label="UserProfileFragment" />
 </navigation>
