--- a/TapasTop/app/src/main/res/values/styles.xml
+++ b/TapasTop/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="OutlinedRoundedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="shapeAppearanceOverlay">@style/shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded</item>
+        <item name="shapeAppearanceOverlay">
+            @style/shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded
+        </item>
         <item name="boxCornerRadiusTopStart">20dp</item>
         <item name="boxCornerRadiusTopEnd">20dp</item>
         <item name="boxCornerRadiusBottomStart">20dp</item>
@@ -12,6 +15,20 @@
         <item name="startIconTint">?attr/colorSecondaryVariant</item>
         <item name="endIconTint">?attr/colorSecondaryVariant</item>
     </style>
+
+    <style name="SearchBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="shapeAppearanceOverlay">
+            @style/shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded
+        </item>
+        <item name="boxCornerRadiusTopStart">20dp</item>
+        <item name="boxCornerRadiusTopEnd">20dp</item>
+        <item name="boxCornerRadiusBottomStart">20dp</item>
+        <item name="boxCornerRadiusBottomEnd">20dp</item>
+        <item name="boxStrokeColor">?attr/colorSecondaryVariant</item>
+        <item name="hintAnimationEnabled">false</item>
+        <item name="hintTextAppearance">@style/TextAppearance.AppCompat.Small</item>
+    </style>
+
     <style name="shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">8dp</item>
@@ -24,4 +41,28 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="AcceptButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/grey_900</item>
+        <item name="backgroundTint">@color/green_700</item>
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DeclineButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/black</item>
+        <item name="backgroundTint">@color/red_500</item>
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AlertDialogCustom" parent="MaterialAlertDialog.Material3">
+        <item name="colorPrimary">@color/blue_700</item>
+        <item name="titleCentered">true</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+
+
 </resources>
