--- a/TapasTop/app/src/main/res/layout/fragment_new_password.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_new_password.xml
@@ -28,6 +28,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintVertical_bias="0.05"
                 android:fontFamily="@font/brandon_grotesque_black"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
                 android:textSize="36sp"
                 android:textColor="@color/black"
                 />
