--- a/TapasTop/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_password_recovery.xml
@@ -26,6 +26,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:textAlignment="center"
+                android:gravity="center_horizontal"
                 app:layout_constraintVertical_bias="0.05"
                 android:fontFamily="@font/brandon_grotesque_black"
                 android:textSize="36sp"
